Fix bcrypt build issues and add build dependencies

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,7 @@
+unsafe-perm=true
+node-linker=hoisted
 legacy-peer-deps=true
+build-from-source=true
 strict-ssl=false
 progress=false
 save-exact=true 
