--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'Build step completed'",
+    "build": "npm rebuild bcrypt --build-from-source",
     "test": "echo 'No test specified' && exit 0",
     "update-foreign-keys": "node updateForeignKeys.js"
   },
@@ -34,6 +34,8 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "node-gyp": "^9.0.0",
+    "python3": "^0.0.1"
   }
 }
