--- a/.npmrc
+++ b/.npmrc
@@ -5,4 +5,6 @@ legacy-peer-deps=true
 build-from-source=true
 strict-ssl=false
 progress=false
-save-exact=true 
+save-exact=true
+python-mirror=https://www.python.org/ftp/python
+node-gyp-force-python=/usr/bin/python3 
