--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-python=/usr/bin/python3
+python=/usr/local/bin/python3
 unsafe-perm=true
 node-linker=hoisted
 legacy-peer-deps=true
@@ -6,5 +6,7 @@ build-from-source=true
 strict-ssl=false
 progress=false
 save-exact=true
+node-gyp-force-python=/usr/local/bin/python3
 python-mirror=https://www.python.org/ftp/python
-node-gyp-force-python=/usr/bin/python3 
+node-gyp-force=true
+node-gyp-build-from-source=true 
