--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npm rebuild bcrypt --build-from-source",
+    "build": "npm ci --only=production",
     "test": "echo 'No test specified' && exit 0",
     "update-foreign-keys": "node updateForeignKeys.js"
   },
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -34,8 +34,6 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "node-gyp": "^9.0.0",
-    "python3": "^0.0.1"
+    "nodemon": "^2.0.22"
   }
 }
