--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Saranga Ayurveda Backend API",
   "main": "server.js",
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "9.x"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "npm ci --only=production",
     "test": "echo 'No test specified' && exit 0",
-    "update-foreign-keys": "node updateForeignKeys.js"
+    "update-foreign-keys": "node updateForeignKeys.js",
+    "heroku-postbuild": "npm ci --only=production"
   },
-  "keywords": [],
+  "keywords": ["node", "express", "api"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
