--- a/app.json
+++ b/app.json
@@ -17,6 +17,10 @@
     "NODE_ENV": {
       "description": "Environment for Node.js app",
       "value": "production"
+    },
+    "NPM_CONFIG_PRODUCTION": {
+      "description": "Install dev dependencies",
+      "value": "false"
     }
   },
   "formation": {
